# scs-tool

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pylint.toml  pyproject.toml
analyzers/panoramix/: panoramix.py  writers.py
analyzers/semgrep/: analyzers.py  constants.py  services.py  writers.py
analyzers/semgrep/process/: loggers.py  writers.py
cli/: executors.py  parsers.py  types.py
common/: constants.py  schemas.py
deploy/: Dockerfile  docker-compose.yaml  entrypoint.sh
deploy/config/: .env.sample
deploy/init/: createbucket.sh
etherscan/: client.py  parser.py  service.py  urls.py
etherscan/client/: requests.py  urls.py
etherscan/config/: client.py  constants.py
etherscan/process/: parsers.py  writers.py
scanners/etherscan/: services.py
scanners/etherscan/client/: requests.py  urls.py
scanners/etherscan/config/: client.py  constants.py
scanners/etherscan/process/: parsers.py  writers.py
src/: .dockerignore  Dockerfile  main.py  pyproject.toml
src/analyzers/myth/: myth.py  schemas.py  services.py
src/analyzers/mythril/: config.py  constants.py  mythril.py  schemas.py  services.py
src/analyzers/openai/: config.py  constants.py  openai.py  schemas.py  services.py
src/analyzers/openai/prompts/: honeypot.j2  ponzi.j2
src/analyzers/panoramix/: constants.py  panoramix.py  schemas.py  services.py  writers.py
src/analyzers/semgrep/: constants.py  schemas.py  semgrep.py  services.py
src/analyzers/semgrep/process/: loggers.py  writers.py
src/analyzers/slither/: config.py  constants.py  schemas.py  services.py  slither.py
src/backend/: settings.py  urls.py
src/backend/contracts/: apps.py  models.py  serializers.py  urls.py  views.py
src/backend/contracts/migrations/: 0001_initial.py
src/backend/contracts/templates/: contracts.html
src/cli/: executors.py  parsers.py  types.py
src/common/: constants.py  minio.py  path.py  schemas.py  utils.py
src/common/config/: config.py  constants.py
src/scanners/etherscan/: parsers.py  schemas.py  services.py
src/scanners/etherscan/api/: requests.py  schemas.py  urls.py
src/scanners/etherscan/client/: requests.py
src/scanners/etherscan/config/: client.py  constants.py
src/scanners/etherscan/process/: parsers.py  writers.py
src/scanners/local/: services.py
src/solc/: solc.py
