[tool.poetry]
name = "SCS-Tool"
version = "0.1.0"
description = "Smart Contract Security Tool"
authors = ["Krasnopolsky Ivan <i1.krasnopolskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
aiohttp = "^3.9.5"
beautifulsoup4 = "^4.12.3"
fastapi = "^0.111.0"
loguru = "^0.7.2"
minio = "^7.2.7"
nest-asyncio = "^1.6.0"
panoramix-decompiler = "^0.6.1"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.1"
semgrep = "^1.75.0"
mythril = "^0.24.8"
docker = "^7.1.0"
evm-cfg-builder = "^0.3.1"
solc-select = "^1.0.4"
openai = "^1.35.3"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pylint = "^3.0.3"
toml-sort = "^0.23.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
exclude = '(\.git|\.cache|\.venv|\.idea|__pycache__)'
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
skip = ["**/__pycache__/**", ".cache", ".git", ".idea", ".venv"]

[tool.pylint]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "broad-exception-caught",
    "too-few-public-methods",
    "use-list-literal",
    "duplicate-code",
    "arguments-differ",
]
max-line-length = 120
